src/org/api/rpc/2.1.0/rpc.md
---
title: "rpc package · @imqueue/rpc v2.1.0 (archived)"
noindex: true
latestUrl: "/api/rpc/latest/"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/rpc](/api/rpc/2.1.0/)

## rpc package

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Description](/api/rpc/2.1.0/rpc.description/)


</td><td>


</td></tr>
<tr><td>

[IMQCache](/api/rpc/2.1.0/rpc.imqcache/)


</td><td>

Generic cache registry


</td></tr>
<tr><td>

[IMQDelay](/api/rpc/2.1.0/rpc.imqdelay/)


</td><td>


</td></tr>
<tr><td>

[IMQLock](/api/rpc/2.1.0/rpc.imqlock/)


</td><td>

Class IMQLock. Implements promise-based locks.


</td></tr>
<tr><td>

[IMQMetadata](/api/rpc/2.1.0/rpc.imqmetadata/)


</td><td>


</td></tr>
<tr><td>

[IMQRPCDescription](/api/rpc/2.1.0/rpc.imqrpcdescription/)


</td><td>


</td></tr>
<tr><td>

[RedisCache](/api/rpc/2.1.0/rpc.rediscache/)


</td><td>

Class RedisCache. Implements cache engine over redis.


</td></tr>
</tbody></table>

## Abstract Classes

<table><thead><tr><th>

Abstract Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[IMQClient](/api/rpc/2.1.0/rpc.imqclient/)


</td><td>

Class IMQClient - base abstract class for service clients.


</td></tr>
<tr><td>

[IMQService](/api/rpc/2.1.0/rpc.imqservice/)


</td><td>

Class IMQService Basic abstract service (server-side) implementation


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[currentMetadata()](/api/rpc/2.1.0/rpc.currentmetadata/)


</td><td>

Returns the metadata of the in-flight IMQ request for the current async execution, if any. Returns `undefined` outside of a `runWithRequest()` scope. The transport carries metadata as an opaque bag; callers interpret its fields.

 {<!-- -->IMQMetadata \| undefined<!-- -->}


</td></tr>
<tr><td>

[expose()](/api/rpc/2.1.0/rpc.expose/)


</td><td>

Expose decorator factory

 {<!-- -->( target: object, methodName: (string), descriptor: TypedPropertyDescriptor<!-- -->&lt;<!-- -->(...args: any\[\]) =<!-- -->&gt; any<!-- -->&gt; ) =<!-- -->&gt; void<!-- -->} - decorator function


</td></tr>
<tr><td>

[fileExists(path)](/api/rpc/2.1.0/rpc.fileexists/)


</td><td>

Checks if file exists at given path


</td></tr>
<tr><td>

[forgetPid(name, id, logger, path)](/api/rpc/2.1.0/rpc.forgetpid/)


</td><td>

Removes pid file for a given name and id


</td></tr>
<tr><td>

[imqCallRejector(reject, req, client)](/api/rpc/2.1.0/rpc.imqcallrejector/)


</td><td>

Builds and returns call rejector, which supports after call optional hook


</td></tr>
<tr><td>

[imqCallResolver(resolve, req, client)](/api/rpc/2.1.0/rpc.imqcallresolver/)


</td><td>

Builds and returns call resolver, which supports after call optional hook


</td></tr>
<tr><td>

[IMQError(code, message, stack, method, args, original)](/api/rpc/2.1.0/rpc.imqerror/)


</td><td>

Builds JSON representation of IMQ Error


</td></tr>
<tr><td>

[indexed(indexTypedef)](/api/rpc/2.1.0/rpc.indexed/)


</td><td>

Implements '<!-- -->@<!-- -->indexed' decorator factory This is used to specify complex service types which are need to expose types containing indexed definition, for example:


</td></tr>
<tr><td>

[lock(enabledOrOptions)](/api/rpc/2.1.0/rpc.lock/)


</td><td>

@<!-- -->lock() decorator implementation Will make all simultaneous similar method calls locked to be resolved with the first obtained values. Similarity is identified by a bypassed method argument values.


</td></tr>
<tr><td>

[logged(options)](/api/rpc/2.1.0/rpc.logged/)


</td><td>

Logger decorator factory for class methods. Will try, catch and log errors during method calls. If logger is bypassed, will use given logger, otherwise will try to use logger defined on class dynamically or statically or will fallback to console.


</td></tr>
<tr><td>

[mkdir(path)](/api/rpc/2.1.0/rpc.mkdir/)


</td><td>

Async mkdir


</td></tr>
<tr><td>

[osUuid()](/api/rpc/2.1.0/rpc.osuuid/)


</td><td>

Returns machine UUID


</td></tr>
<tr><td>

[pid(name, path)](/api/rpc/2.1.0/rpc.pid/)


</td><td>

Returns increment-based process identifier for a given name


</td></tr>
<tr><td>

[property(type, isOptional)](/api/rpc/2.1.0/rpc.property/)


</td><td>

Implements '<!-- -->@<!-- -->property' decorator factory This is used to specify complex service types to be exposed


</td></tr>
<tr><td>

[remote()](/api/rpc/2.1.0/rpc.remote/)


</td><td>

Implements '<!-- -->@<!-- -->remote' decorator factory

 {<!-- -->( target: any, methodName: (string), descriptor: TypedPropertyDescriptor<!-- -->&lt;<!-- -->(...args: any\[\]) =<!-- -->&gt; any<!-- -->&gt; ) =<!-- -->&gt; void<!-- -->}


</td></tr>
<tr><td>

[runWithRequest(request, fn)](/api/rpc/2.1.0/rpc.runwithrequest/)


</td><td>

Runs the given function with `request` bound to the current async execution context, so any code reached from it (and its asynchronous continuations) can access the in-flight request's metadata via `currentMetadata()` without threading it through call signatures.

The binding is scoped to the function: it is established for the duration of the call and automatically removed afterwards, which keeps concurrent requests isolated from one another.


</td></tr>
<tr><td>

[send(request, response, service)](/api/rpc/2.1.0/rpc.send/)


</td><td>

Sends IMQ response with support of after call optional hook


</td></tr>
<tr><td>

[signature(className, methodName, args)](/api/rpc/2.1.0/rpc.signature/)


</td><td>

Constructs and returns hash string for a given set of className, methodName and arguments.


</td></tr>
<tr><td>

[writeFile(path, content)](/api/rpc/2.1.0/rpc.writefile/)


</td><td>

Async writeFile


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ArgDescription](/api/rpc/2.1.0/rpc.argdescription/)


</td><td>

Method argument description


</td></tr>
<tr><td>

[CacheDecorator](/api/rpc/2.1.0/rpc.cachedecorator/)


</td><td>


</td></tr>
<tr><td>

[CacheDecoratorOptions](/api/rpc/2.1.0/rpc.cachedecoratoroptions/)


</td><td>


</td></tr>
<tr><td>

[ICache](/api/rpc/2.1.0/rpc.icache/)


</td><td>


</td></tr>
<tr><td>

[ICacheConstructor](/api/rpc/2.1.0/rpc.icacheconstructor/)


</td><td>


</td></tr>
<tr><td>

[IMQAfterCall](/api/rpc/2.1.0/rpc.imqaftercall/)


</td><td>


</td></tr>
<tr><td>

[IMQBeforeCall](/api/rpc/2.1.0/rpc.imqbeforecall/)


</td><td>


</td></tr>
<tr><td>

[IMQClientOptions](/api/rpc/2.1.0/rpc.imqclientoptions/)


</td><td>


</td></tr>
<tr><td>

[IMQLockMetadata](/api/rpc/2.1.0/rpc.imqlockmetadata/)


</td><td>


</td></tr>
<tr><td>

[IMQLockMetadataItem](/api/rpc/2.1.0/rpc.imqlockmetadataitem/)


</td><td>


</td></tr>
<tr><td>

[IMQMetricsServerOptions](/api/rpc/2.1.0/rpc.imqmetricsserveroptions/)


</td><td>


</td></tr>
<tr><td>

[IMQRPCError](/api/rpc/2.1.0/rpc.imqrpcerror/)


</td><td>

Response error data structure, which service returns if error occurred during service method execution.


</td></tr>
<tr><td>

[IMQRPCRequest](/api/rpc/2.1.0/rpc.imqrpcrequest/)


</td><td>

Request message data structure expected to be handled by a service


</td></tr>
<tr><td>

[IMQRPCResponse](/api/rpc/2.1.0/rpc.imqrpcresponse/)


</td><td>

Response message data structure, which service replies to handled requests.


</td></tr>
<tr><td>

[IMQServiceOptions](/api/rpc/2.1.0/rpc.imqserviceoptions/)


</td><td>


</td></tr>
<tr><td>

[IRedisCacheOptions](/api/rpc/2.1.0/rpc.irediscacheoptions/)


</td><td>


</td></tr>
<tr><td>

[LockOptions](/api/rpc/2.1.0/rpc.lockoptions/)


</td><td>


</td></tr>
<tr><td>

[LoggedDecoratorOptions](/api/rpc/2.1.0/rpc.loggeddecoratoroptions/)


</td><td>


</td></tr>
<tr><td>

[MethodDescription](/api/rpc/2.1.0/rpc.methoddescription/)


</td><td>

Method description


</td></tr>
<tr><td>

[MethodsCollectionDescription](/api/rpc/2.1.0/rpc.methodscollectiondescription/)


</td><td>

Methods collection description


</td></tr>
<tr><td>

[PropertyDescription](/api/rpc/2.1.0/rpc.propertydescription/)


</td><td>

Service type description


</td></tr>
<tr><td>

[ReturnValueDescription](/api/rpc/2.1.0/rpc.returnvaluedescription/)


</td><td>

Return value description


</td></tr>
<tr><td>

[ServiceClassDescription](/api/rpc/2.1.0/rpc.serviceclassdescription/)


</td><td>

Service class description


</td></tr>
<tr><td>

[ServiceDescription](/api/rpc/2.1.0/rpc.servicedescription/)


</td><td>

Service description


</td></tr>
<tr><td>

[Thunk](/api/rpc/2.1.0/rpc.thunk/)


</td><td>


</td></tr>
<tr><td>

[TypeDescription](/api/rpc/2.1.0/rpc.typedescription/)


</td><td>

Service types description


</td></tr>
<tr><td>

[TypesDescription](/api/rpc/2.1.0/rpc.typesdescription/)


</td><td>

Entire service types metadata structure


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AFTER\_HOOK\_ERROR](/api/rpc/2.1.0/rpc.after_hook_error/)


</td><td>


</td></tr>
<tr><td>

[BEFORE\_HOOK\_ERROR](/api/rpc/2.1.0/rpc.before_hook_error/)


</td><td>


</td></tr>
<tr><td>

[cache](/api/rpc/2.1.0/rpc.cache/)


</td><td>


</td></tr>
<tr><td>

[DEFAULT\_IMQ\_CLIENT\_OPTIONS](/api/rpc/2.1.0/rpc.default_imq_client_options/)


</td><td>

Default client options

 {<!-- -->IMQClientOptions<!-- -->}


</td></tr>
<tr><td>

[DEFAULT\_IMQ\_METRICS\_SERVER\_OPTIONS](/api/rpc/2.1.0/rpc.default_imq_metrics_server_options/)


</td><td>

Default metric server options

 {<!-- -->NonNullable<IMQMetricsServerOptions>}


</td></tr>
<tr><td>

[DEFAULT\_IMQ\_SERVICE\_OPTIONS](/api/rpc/2.1.0/rpc.default_imq_service_options/)


</td><td>

Default service options

 {<!-- -->IMQServiceOptions<!-- -->}


</td></tr>
<tr><td>

[DEFAULT\_REDIS\_CACHE\_OPTIONS](/api/rpc/2.1.0/rpc.default_redis_cache_options/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_PID\_DIR](/api/rpc/2.1.0/rpc.imq_pid_dir/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_TMP\_DIR](/api/rpc/2.1.0/rpc.imq_tmp_dir/)


</td><td>


</td></tr>
<tr><td>

[REDIS\_CLIENT\_INIT\_ERROR](/api/rpc/2.1.0/rpc.redis_client_init_error/)


</td><td>


</td></tr>
<tr><td>

[SIGNALS](/api/rpc/2.1.0/rpc.signals/)


</td><td>


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AcquiredLock](/api/rpc/2.1.0/rpc.acquiredlock/)


</td><td>


</td></tr>
<tr><td>

[ICacheAdapter](/api/rpc/2.1.0/rpc.icacheadapter/)


</td><td>


</td></tr>
<tr><td>

[IMQLockQueue](/api/rpc/2.1.0/rpc.imqlockqueue/)


</td><td>


</td></tr>
<tr><td>

[IMQLockTask](/api/rpc/2.1.0/rpc.imqlocktask/)


</td><td>


</td></tr>
<tr><td>

[LoggedLogLevel](/api/rpc/2.1.0/rpc.loggedloglevel/)


</td><td>


</td></tr>
</tbody></table>

